refactoring animallist service make animallist search system